--- a/references.html
+++ b/references.html
@@ -15,10 +15,9 @@
 </ul>
 </head>
 <body>
-        <html class="home-bg">
     <div id="background">
     <h1>Hello Webpage<h1>
-    <h3 id="bigTitle">About Me</h3>
+    <h3 id="bigTitle">References</h3>
     <a id="movie_list">
         <ul class="lists">
         <li>LoTR</li>
