--- a/unitOne.html
+++ b/unitOne.html
@@ -7,18 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <ul>
-        <li><a href="index.html">About Me</a></li>
-        <li><a href="unitOne.html">Unit 1</a></li>
-        <li><a href="unitTwo.html">Unit 2</a></li>
-        <li><a href="references.html">References</a></li>
-        <li><a href="contact.html">Contact</a></li>
+  <li><a href="index.html">About Me</a></li>
+  <li><a href="unitOne.html">Unit 1</a></li>
+  <li><a href="unitTwo.html">Unit 2</a></li>
+  <li><a href="references.html">References</a></li>
+  <li><a href="contact.html">Contact</a></li>
 </ul>
 </head>
 <body>
-        <html class="home-bg">
     <div id="background">
     <h1>Hello Webpage<h1>
-    <h3 id="bigTitle">About Me</h3>
+    <h3 id="bigTitle">Unit One</h3>
     <a id="movie_list">
         <ul class="lists">
         <li>LoTR</li>
