--- a/references.html
+++ b/references.html
@@ -18,7 +18,7 @@
                         <li><a href="references.html">References</a></li>
                         <li><a href="contact.html">Contact</a></li>
                 </ul>
-    <div id="background">
+                <body id="backgroundReferences">
     <h1>References<h1>
     <h2 id="videoGameListTitle">Some video games I like</h2>
     <a id="videoGameList">
