--- a/unitOne.html
+++ b/unitOne.html
@@ -18,7 +18,7 @@
                         <li><a href="references.html">References</a></li>
                         <li><a href="contact.html">Contact</a></li>
                 </ul>
-    <div id="background1">
+    <body id="backgroundUnitOne">
     <h1>Unit 1<h1>
     <h2 id="1.1">1.1</h2>
               <p>
