--- a/unitOne.html
+++ b/unitOne.html
@@ -13,8 +13,8 @@
         <html class="home-bg">
                 <ul id="navigationBar">
                         <li><a href="index.html">About Me</a></li>
-                        <li><a href="unitOne.html">Unit 1</a></li>
-                        <li><a href="unitTwo.html">Unit 2</a></li>
+                        <li><a href="unitOneOne.html"> Improving productivity with IT</a></li>
+                        <li><a href="unitOneTwoandThree.html">Unit 2</a></li>
                         <li><a href="references.html">References</a></li>
                         <li><a href="contact.html">Contact</a></li>
                 </ul>
