--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
         <html class="home-bg">
                 <ul id="navigationBar">
                         <li><a href="index.html">About Me</a></li>
-                        <li><a href="unitOne.html">Unit 1</a></li>
-                        <li><a href="unitTwo.html">Unit 2</a></li>
-                        <li><a href="references.html">References</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="unitOne.html">Improving productivity with IT</a></li>
+                        <li><a href="unitTwo.html">Review</a></li>
+                        <li><a href="references.html">Website Software</a></li>
+                        <li><a href="contact.html">References & Contact</a></li>
                 </ul>
                 <body id="backgroundContact">
                         <h1>Unit 1<h1>
