--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <li><a href="unitOne.html">Improving productivity with IT</a></li>
                         <li><a href="unitTwo.html">Review</a></li>
                         <li><a href="references.html">Website Software</a></li>
-                        <li><a href="contact.html">References & Contact</a></li>
+                        <li><a href="contact.html">References</a></li>
                 </ul>
     <body id="background">
     <h1>About Me<h1>
